bootstrap/gateway/routes/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: local-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - argocd.__INGRESS_BASE_DOMAIN__
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
